add project overview

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -33,6 +33,9 @@
     <p><strong>Author:</strong> Stephen Lee</p>
     <p><strong>Date:</strong> February 2025</p>
 
+    <h2>Overview</h2>
+    <p>In this project we begin by building up a rasterization pipeline. From there, we branch out to implement a wide variety of features to make this more rich such as transforms and texture mapping. We further implement features to combat aliasing effects in these scenes such as supersampling, pixel sampling, and level sampling which we will go into detail later.</p>
+
     <h2>Task 1: Drawing Single-Color Triangles</h2>
     <p>My implementations starts by checking the winding order of the triangle that is passed in, because the rest of the implementation assumes that the triangle is oriented with points labeled in CCW order. I do this by checking the sign of the cross product of 2 edges of the triangle and swapping points to ensure that the sign is always positive.</p>
     <p>I then compute the bounding box of the triangle that we are rasterizing. I accomplish this by finding the minimum and maximum X and Y values between all the input points. The minimum computes the integer floor of the minimum X and Y values, and the maximum computes the integer ceiling of the X and Y values. This should be the smallest possible bounding box that ensures that the entire triangle is within it, because we are sampling at the center of each pixel. By doing the floor for the minimum we can clearly see that this would include the center of the pixel since we are indexing from the top-left corner of each pixel. We need to do the ceiling of the maximum value, because when we cast the float to an int to iterate over pixel indices, we could possibly be excluding pixels where its center lies in the triangle.</p>
