add project overview

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -33,7 +33,7 @@
     <p><strong>Author:</strong> Stephen Lee</p>
     <p><strong>Date:</strong> February 2025</p>
 
-    <h2>Overview</h2>
+    <h2>Project Overview</h2>
     <p>In this project we begin by building up a rasterization pipeline. From there, we branch out to implement a wide variety of features to make this more rich such as transforms and texture mapping. We further implement features to combat aliasing effects in these scenes such as supersampling, pixel sampling, and level sampling which we will go into detail later.</p>
 
     <h2>Task 1: Drawing Single-Color Triangles</h2>
