--- a/index.html
+++ b/index.html
@@ -79,38 +79,32 @@
         <h1>CS184/284A Homework Webpages</h1>
         <div class="grid">
             <div class="grid-item">
-                <img src="images/hw1.jpg" alt="Homework 1 Preview">
-                <a href="hw1/index.html">Homework 1</a>
+                <img src="./images/hw1.jpg" alt="Homework 1 Preview">
+                <a href="./hw1/index.html">Homework 1</a>
             </div>
             <div class="grid-item">
-                <img src="images/hw2.png" alt="Homework 2 Preview">
-                <a href="hw2/index.html">Homework 2</a>
+                <img src="./images/hw2.png" alt="Homework 2 Preview">
+                <a href="./hw2/index.html">Homework 2</a>
             </div>
             <div class="grid-item">
-                <img src="images/temp.jpg" alt="Homework 3 Preview">
-                <a href="hw3/index.html">Homework 3</a>
+                <img src="./images/temp.jpg" alt="Homework 3 Preview">
+                <a href="./hw3/index.html">Homework 3</a>
             </div>
             <div class="grid-item">
-                <img src="images/temp.jpg" alt="Homework 4 Preview">
-                <a href="hw4/index.html">Homework 4</a>
+                <img src="./images/temp.jpg" alt="Homework 4 Preview">
+                <a href="./hw4/index.html">Homework 4</a>
             </div>
         </div>
     </div>
 </body>
 <script>
-	// Get the base directory for the project
-	var basePath = "hw-webpages-stephen_webpage"; 
-
-	// Update all image paths
-	var images = document.querySelectorAll('img');
-	images.forEach(function(img) {
-		img.src = basePath + '/' + img.src;
-	});
-
-	// Update all anchor tag hrefs
-	var links = document.querySelectorAll('a');
-	links.forEach(function(link) {
-		link.href = basePath + '/' + link.getAttribute('href');
-	});
+	var links = document.body.getElementsByTagName("a")
+	var a = window.location.href.indexOf(".io")
+	var repo_name = window.location.href.substring(a+3)
+	for(var i = 0; i < links.length; i++){
+		var link = links[i]
+		var actual_name = link.href.substring(link.href.indexOf(".io")+4)
+		link.href = repo_name + actual_name
+	}
 </script>
 </html>
