--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
         <div class="grid">
             <div class="grid-item">
                 <img src="./images/hw1.jpg" alt="Homework 1 Preview">
-                <a href="./hw1/index.html">Homework 1</a>
+                <a href="/hw1/index.html">Homework 1</a>
             </div>
             <div class="grid-item">
                 <img src="./images/hw2.png" alt="Homework 2 Preview">
-                <a href="./hw2/index.html">Homework 2</a>
+                <a href="/hw2/index.html">Homework 2</a>
             </div>
             <div class="grid-item">
                 <img src="./images/temp.jpg" alt="Homework 3 Preview">
-                <a href="./hw3/index.html">Homework 3</a>
+                <a href="/hw3/index.html">Homework 3</a>
             </div>
             <div class="grid-item">
                 <img src="./images/temp.jpg" alt="Homework 4 Preview">
-                <a href="./hw4/index.html">Homework 4</a>
+                <a href="/hw4/index.html">Homework 4</a>
             </div>
         </div>
     </div>
