--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="grid-item">
                 <img src="images/temp.jpg" alt="Homework 3 Preview">
-                <a href="/hw3/index.html">Homework 3</a>
+                <a href="hw3/index.html">Homework 3</a>
             </div>
             <div class="grid-item">
                 <img src="images/temp.jpg" alt="Homework 4 Preview">
@@ -97,7 +97,7 @@
         </div>
     </div>
 </body>
-<script>
+<!-- <script>
 	var links = document.body.getElementsByTagName("a")
 	var a = window.location.href.indexOf(".io")
 	var repo_name = window.location.href.substring(a+3)
@@ -106,5 +106,5 @@
 		var actual_name = link.href.substring(link.href.indexOf(".io")+4)
 		link.href = repo_name + actual_name
 	}
-</script>
+</script> -->
 </html>
