--- a/hw3/index.html
+++ b/hw3/index.html
@@ -37,8 +37,7 @@
 		Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw3-stephen_hw3">https://github.com/cal-cs184-student/sp25-hw3-stephen_hw3</a>
 		
 		<figure>
-			<img src="cornell.png" alt="Cornell Boxes with Bunnies" style="width:70%"/>
-			<figcaption>You can add images with captions!</figcaption>
+			<img src="wall-e_2048_1.png" alt="wall-e" style="width:70%"/>
 		</figure>
 
 		<!--
