--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <a href="hw2/index.html">Homework 2</a>
             </div>
             <div class="grid-item">
-                <img src="images/temp.jpg" alt="Homework 3 Preview">
+                <img src="images/hw3.png" alt="Homework 3 Preview">
                 <a href="hw3/index.html">Homework 3</a>
             </div>
             <div class="grid-item">
