modify landing page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <a href="hw3/index.html">Homework 3</a>
             </div>
             <div class="grid-item">
-                <img src="images/temp.jpg" alt="Homework 4 Preview">
+                <img src="images/hw4.png" alt="Homework 4 Preview">
                 <a href="hw4/index.html">Homework 4</a>
             </div>
         </div>
