--- a/hw4/index.html
+++ b/hw4/index.html
@@ -372,7 +372,7 @@
 				</td>
 				<td style="text-align: center;">
 					<img src="p5_displacement_128.png" width="400px"/>
-					<figcaption>displacement mapping -a 128 -o 128t</figcaption>
+					<figcaption>displacement mapping -a 128 -o 128</figcaption>
 				</td>
 			  </tr>
 			</table>
